@@ -1,5 +1,9 @@
 # $Id$
 
+2007-06-19	Konstantin V. Arkhipov
+
+	* main/SPL/bundled/: removed, it was a bad idea.
+
 2007-06-18	Konstantin V. Arkhipov
 
 	* core/Form/MappedForm.class.php: now checks Form's rules upon
